<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.whiterabbit.bondi</groupId>
  <artifactId>bondi-frontend</artifactId>
  <version>0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>Bondi Frontend</name>
    
  <dependencies>
    <!-- DI dependencies -->
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>${guice.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.inject.extensions</groupId>
      <artifactId>guice-servlet</artifactId>
      <version>${guice.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.inject.extensions</groupId>
      <artifactId>guice-assistedinject</artifactId>
      <version>${guice.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.gwt.inject</groupId>
      <artifactId>gin</artifactId>
      <version>2.0.0</version>
    </dependency>
    
    <!-- GWT-Platform dependencies -->
    <dependency>
      <groupId>com.gwtplatform</groupId>
      <artifactId>gwtp-mvp-client</artifactId>
      <version>${gwtp.version}</version>
    </dependency>
    <dependency>
      <groupId>com.gwtplatform</groupId>
      <artifactId>gwtp-dispatch-client</artifactId>
      <version>${gwtp.version}</version>
    </dependency>
    <dependency>
      <groupId>com.gwtplatform</groupId>
      <artifactId>gwtp-dispatch-server-guice</artifactId>
      <version>${gwtp.version}</version>
    </dependency>
    <dependency>
      <groupId>com.gwtplatform</groupId>
      <artifactId>gwtp-dispatch-shared</artifactId>
      <version>${gwtp.version}</version>
    </dependency>
    <dependency>
      <groupId>com.gwtplatform</groupId>
      <artifactId>gwtp-processors</artifactId>
      <version>${gwtp.version}</version>
    </dependency>
    <dependency>
      <groupId>com.gwtplatform</groupId>
      <artifactId>gwtp-tester</artifactId>
      <version>1.0</version>
      <scope>test</scope>
    </dependency>
    
    <!-- Google Web Toolkit dependencies -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwt.version}</version>
    </dependency>
    
    <!-- GWT JQuery dependencies -->
    <dependency>
      <groupId>com.xedge.jquery</groupId>
      <artifactId>gwt-jquery</artifactId>
      <version>1.1</version>
    </dependency>

	<!-- GWT Bootstrap dependencies -->
	<dependency>
		<groupId>com.github.gwtbootstrap</groupId>
		<artifactId>gwt-bootstrap</artifactId>
		<version>2.2.1.0-SNAPSHOT</version>
	</dependency>

	<!-- GWT Maps API -->
	<dependency>
		<groupId>com.github.branflake2267</groupId>
		<artifactId>gwt-maps-api</artifactId>
		<version>3.9.0-build-17</version>
		<exclusions>
			<exclusion>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt-dev</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
    
    <!-- persistence dependencies -->
    <dependency>
      <groupId>org.hibernate.javax.persistence</groupId>
      <artifactId>hibernate-jpa-2.0-api</artifactId>
      <version>1.0.1.Final</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
      <version>4.1.4.Final</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-c3p0</artifactId>
      <version>4.1.4.Final</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>4.1.0.Final</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>4.1.0.Final</version>
      <classifier>sources</classifier>
    </dependency>
    <dependency>
      <groupId>com.google.inject.extensions</groupId>
      <artifactId>guice-persist</artifactId>
      <version>${guice.version}</version>
    </dependency>
    
    <!-- Utils -->
    <dependency>
      <groupId>net.sf.dozer</groupId>
      <artifactId>dozer</artifactId>
      <version>5.4.0</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <!-- Log -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.6.6</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.0.6</version>
      <scope>runtime</scope>
    </dependency>

    <!-- test -->
    <dependency>
      <groupId>org.jukito</groupId>
      <artifactId>jukito</artifactId>
      <version>1.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    <resources>
      <resource>
        <directory>${project.basedir}/src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.version}</version>
        <configuration>
          <runTarget>Bondi.html</runTarget>
          <extraJvmArgs>-Xmx1536M -XX:MaxPermSize=786M</extraJvmArgs>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>generate-sources</id>
            <phase>generate-sources</phase>
          </execution>
          <execution>
            <id>prepare-package</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.mortbay.jetty</groupId>
        <artifactId>maven-jetty-plugin</artifactId>
        <version>6.1.15</version>
        <configuration>
          <!-- By default the artifactId is taken, override it with something simple -->
          <contextPath>/</contextPath>
          <scanIntervalSeconds>2</scanIntervalSeconds>
          <stopKey>foo</stopKey>
          <stopPort>9999</stopPort>
          <connectors>
            <connector
                    implementation="org.mortbay.jetty.nio.SelectChannelConnector">
              <port>9095</port>
              <maxIdleTime>60000</maxIdleTime>
            </connector>
          </connectors>
        </configuration>
        <executions>
          <execution>
            <id>start-jetty</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <scanIntervalSeconds>0</scanIntervalSeconds>
              <daemon>true</daemon>
            </configuration>
          </execution>
          <execution>
            <id>stop-jetty</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>stop</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.1</version>

        <configuration>
          <url>http://ec2-107-22-142-29.compute-1.amazonaws.com:8080/manager/text</url>
          <server>bytelion</server>
          <path>${project.deployment.path}</path>
          <charset>${project.build.sourceEncoding}</charset>
          <update>true</update>
          <mode>war</mode>
          <warFile>${project.build.directory}/${project.build.finalName}.war</warFile>
        </configuration>

        <executions>
          <execution>
            <phase>deploy</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
	  </plugin>
    </plugins>
  </build>
  
  <profiles>
    <!-- environment profiles -->
    <profile>
      <id>uat</id>
      <properties>
        <persistence.endpoint>localhost</persistence.endpoint>
        <persistence.db.name>bondi_uat</persistence.db.name>
        <persistence.jdbc.user>bondi_uat</persistence.jdbc.user>
        <persistence.jdbc.password>bondi_uat</persistence.jdbc.password>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.14.1</version>
            <configuration>
              <skipTests>true</skipTests>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>dev</id>
      <properties>
        <persistence.endpoint>owentar.dyndns.org</persistence.endpoint>
        <persistence.db.name>bondi_dev</persistence.db.name>
        <persistence.jdbc.user>bondi_dev</persistence.jdbc.user>
        <persistence.jdbc.password>bondi_dev</persistence.jdbc.password>
      </properties>
    </profile>
    
    <!-- database profiles -->
    <profile>
      <id>h2-db</id>
      <dependencies>
        <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>1.3.160</version>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
      <properties>
        <persistence.jdbc.driver>org.hibernate.dialect.H2Dialect</persistence.jdbc.driver>
        <persistence.jdbc.url><![CDATA[jdbc:h2:tcp://${persistence.endpoint}/${persistence.db.name}]]></persistence.jdbc.url>
        <persistence.jdbc.user>sa</persistence.jdbc.user>
        <persistence.jdbc.password></persistence.jdbc.password>
        <persistence.hibernate.dialect>org.hibernate.dialect.H2Dialect</persistence.hibernate.dialect>
        <persistence.hibernate.hbm2ddl.auto>create-drop</persistence.hibernate.hbm2ddl.auto>
      </properties>
    </profile>
    <profile>
      <id>mysql-db</id>
      <dependencies>
        <dependency>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.21</version>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
      <properties>
        <persistence.jdbc.driver>com.mysql.jdbc.Driver</persistence.jdbc.driver>
        <persistence.jdbc.url><![CDATA[jdbc:mysql://${persistence.endpoint}:3306/${persistence.db.name}]]></persistence.jdbc.url>
        <persistence.hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</persistence.hibernate.dialect>
        <persistence.hibernate.hbm2ddl.auto>validate</persistence.hibernate.hbm2ddl.auto>
      </properties>
    </profile>
  </profiles>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <gwt.version>2.5.1</gwt.version>
    <gwtp.version>1.0</gwtp.version>
    <guice.version>3.0</guice.version>
    <jersey.version>1.17.1</jersey.version>
  </properties>
</project>
